Removed arch loom